--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,75 @@
-version: '3'
+version: "3.5"
 services:
-  cassandra:
-    image: cassandra:3.11
+  elasticsearch:
+    container_name: temporal-elasticsearch
+    environment:
+      - cluster.routing.allocation.disk.threshold_enabled=true
+      - cluster.routing.allocation.disk.watermark.low=512mb
+      - cluster.routing.allocation.disk.watermark.high=256mb
+      - cluster.routing.allocation.disk.watermark.flood_stage=128mb
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms100m -Xmx512m
+    image: elasticsearch:7.16.2
+    networks:
+      - temporal-network
     ports:
-      - "9042:9042"
-  statsd:
-    image: graphiteapp/graphite-statsd
+      - 9200:9200
+  postgresql:
+    container_name: temporal-postgresql
+    environment:
+      POSTGRES_PASSWORD: temporal
+      POSTGRES_USER: temporal
+    image: postgres:13
+    networks:
+      - temporal-network
     ports:
-      - "8080:80"
-      - "2003:2003"
-      - "8125:8125"
-      - "8126:8126"
+      - 5432:5432
   temporal:
-    image: ubertemporal/server:master-auto-setup
-    ports:
-     - "7933:7933"
-     - "7934:7934"
-     - "7935:7935"
-     - "7939:7939"
-    environment:
-      - "CASSANDRA_SEEDS=cassandra"
-      - "STATSD_ENDPOINT=statsd:8125"
-      - "DYNAMIC_CONFIG_FILE_PATH=custom-config/development.yaml"
+    container_name: temporal
     depends_on:
-      - cassandra
-      - statsd
-    volumes:
-      - "./config:/etc/temporal/custom-config"
-  temporal-web:
-    image: ubertemporal/web:latest
+      - postgresql
+      - elasticsearch
     environment:
-      - "CADENCE_TCHANNEL_PEERS=temporal:7933"
+      - DB=postgresql
+      - DB_PORT=5432
+      - POSTGRES_USER=temporal
+      - POSTGRES_PWD=temporal
+      - POSTGRES_SEEDS=postgresql
+      - DYNAMIC_CONFIG_FILE_PATH=config/dynamicconfig/development_es.yaml
+      - ENABLE_ES=true
+      - ES_SEEDS=elasticsearch
+      - ES_VERSION=v7
+    image: temporalio/auto-setup:1.15.0
+    networks:
+      - temporal-network
     ports:
-      - "8088:8088"
+      - 7233:7233
+    volumes:
+      - ./dynamicconfig:/etc/temporal/config/dynamicconfig
+  temporal-admin-tools:
+    container_name: temporal-admin-tools
     depends_on:
       - temporal
+    environment:
+      - TEMPORAL_CLI_ADDRESS=temporal:7233
+    image: temporalio/admin-tools:1.15.0
+    networks:
+      - temporal-network
+    stdin_open: true
+    tty: true
+  temporal-web:
+    container_name: temporal-web
+    depends_on:
+      - temporal
+    environment:
+      - TEMPORAL_GRPC_ENDPOINT=temporal:7233
+      - TEMPORAL_PERMIT_WRITE_API=true
+    image: temporalio/web:1.13.0
+    networks:
+      - temporal-network
+    ports:
+      - 8088:8088
+networks:
+  temporal-network:
+    driver: bridge
+    name: temporal-network
